# METASHARKS

./: README.md  docker-compose.yml  pyproject.toml
university/studies/: apps.py  permissions_user.py  serializers.py  tasks.py
university/studies/admin/: __init__.py  admin_faculty.py  admin_groups.py  admin_students.py  admin_subjects.py  admin_user.py
university/studies/api/: __init__.py  api_students.py
university/studies/migrations/: 0001_initial.py  0002_student_email.py  0003_alter_student_email.py
university/studies/models/: __init__.py  education_groups.py  faculty.py  student.py  subjects.py  user.py
university/university/: api.json  celery.py  settings.py  urls.py
